刷新权限
