# server/docs/swagger.json
@@ -467,6 +467,14 @@
         },
         "/user/profile": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiKeyDomain": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
